--- a/nieuws.html
+++ b/nieuws.html
@@ -3,7 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Nieuws</title>
+  <title>Regitel</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/img/favicon/site.webmanifest">
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="popup/style2.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
