--- a/testing.html
+++ b/testing.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Contact us</title>
-	<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
+  <title>Regitel</title>
+  <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
   <link rel="stylesheet" href="./css/style.css" />
 
 </head>
@@ -33,10 +33,14 @@
           <a class="link contact" href="./contact.html">Contact</a>
         </li>
         <li>
-          <a class="link word_lid" href="word_lid.html"><h4>Word Lid</h4></a>
+          <a class="link word_lid" href="word_lid.html">
+            <h4>Word Lid</h4>
+          </a>
         </li>
         <li>
-          <a class="link login" href="https://web.bundeling.com/login"><h4>Login</h4></a>
+          <a class="link login" href="https://web.bundeling.com/login">
+            <h4>Login</h4>
+          </a>
         </li>
       </ul>
       <!----------------------------------------  hamburger  ---------------------------------------->
@@ -53,45 +57,45 @@
   <!----------------------------------------  End navigation  ---------------------------------------->
 
   <!----------------------------------------  Begin content  ---------------------------------------->
-  
 
-    <!--Begin containercontact-->
-    <div class="containercontact">
 
-      <!--Begin context-box-->
-      <div class="context-box">
-        <div class="left"></div>
-        <div class="right">
-          <h2>Contact us</h2>
-          <input type="text" class="field" placeholder="Your Name">
-          <input type="email" class="field" placeholder="Your Email">
-          <input type="text" class="field" placeholder="Your Phone">
-          <textarea placeholder="Message" class="field area"></textarea>
-          <button class="btncontact">Verstuur</button>
-        </div>          
+  <!--Begin containercontact-->
+  <div class="containercontact">
+
+    <!--Begin context-box-->
+    <div class="context-box">
+      <div class="left"></div>
+      <div class="right">
+        <h2>Contact us</h2>
+        <input type="text" class="field" placeholder="Your Name">
+        <input type="email" class="field" placeholder="Your Email">
+        <input type="text" class="field" placeholder="Your Phone">
+        <textarea placeholder="Message" class="field area"></textarea>
+        <button class="btncontact">Verstuur</button>
+      </div>
 
       <!--End context-box-->
-      </div>
-      <footer class="footer">
-        <ul>
-          <div class="social-media">
-            <div class="icons">
-              <li><a href="https://twitter.com/regitel"><img
-                src="https://img.icons8.com/color/48/000000/twitter--v1.png"></a></li>
-          <li><a href="https://www.linkedin.com/groups/75427/"><img
-                src="https://img.icons8.com/color/48/null/linkedin-2--v1.png"></a></li>
-          <li><a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured"><img
-                src="https://img.icons8.com/color/48/000000/youtube-play.png"></a></li>
-            </div>
-          </div>
-        </ul>
-      </footer>
-      <!--End container-->
     </div>
-    <!--End content-->
-    
-    <!----------------------------------------  Start footer  ---------------------------------------->
-    
+    <footer class="footer">
+      <ul>
+        <div class="social-media">
+          <div class="icons">
+            <li><a href="https://twitter.com/regitel"><img
+                  src="https://img.icons8.com/color/48/000000/twitter--v1.png"></a></li>
+            <li><a href="https://www.linkedin.com/groups/75427/"><img
+                  src="https://img.icons8.com/color/48/null/linkedin-2--v1.png"></a></li>
+            <li><a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured"><img
+                  src="https://img.icons8.com/color/48/000000/youtube-play.png"></a></li>
+          </div>
+        </div>
+      </ul>
+    </footer>
+    <!--End container-->
+  </div>
+  <!--End content-->
+
+  <!----------------------------------------  Start footer  ---------------------------------------->
+
 </body>
 
 </html>
